feat/add-activities-report-endpoint (#57)
